name:                nanoparsec
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/smunix/nanoparsec#readme
license:             BSD3
license-file:        LICENSE
author:              Providence Salumu
maintainer:          Providence.Salumu@smunix.com
copyright:           BSD
category:            Compiler
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         
  exposed-modules:     NanoParsec
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring

  default-language:    Haskell2010

executable nanoparsec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , nanoparsec
  default-language:    Haskell2010

test-suite nanoparsec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , nanoparsec
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/smunix/nanoparsec
